<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">慧家养老 </string>
    <string name="app_main_name">慧家养老  一键到家</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login">登录</string>
    <string name="account_user">用户名</string>
    <string name="account_passwd">密码</string>
    <string name="account_keep">自动登录</string>
    <string name="account_sign_up">注册</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="test">TEst</string>
    <string name="fam_rela">关系</string>
    <string name="fam_contact">联系方式</string>
    <string name="fam_name">姓名</string>
    <string name="fam_other_contact">其他联系方式</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="family_member">家庭成员</string>
    <string name="title_activity_health_info">HealthInfoActivity</string>
    <string name="health_type">数值类型</string>
    <string name="health_value">数值</string>
    <string name="health_values">健康数值</string>
    <string name="health_value_info">正常：绿色 ，低或者高位黄色，高或者过低为红色</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="today_sport">运动量</string>
    <string name="base_info">基本信息</string>
    <string name="monitor">健康数据</string>
    <string name="synthesizeService">综合服务</string>
    <string name="medical">健康医疗</string>
    <string name="oldRestaurant">老年餐厅</string>
    <string name="liberary">养生咨询</string>
    <string name="title_activity_synthesize_service">SynthesizeServiceActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="proxy_drive">代驾</string>
    <string name="maintenance">门窗修理</string>
    <string name="open_knock">开锁服务</string>
    <string name="water_electric">水电维修</string>
    <string name="reserver">预约服务</string>
    <string name="proxy_get">代取服务</string>
    <string name="call_taxi">叫车服务</string>
    <string name="out_attack">外出陪同</string>
    <string name="housemaid">保姆</string>
    <string name="cleaner">保洁</string>
    <string name="pay_hours">小时工</string>
    <string name="attacher">陪护</string>
    <string name="MedicineService">医疗服务</string>
    <string name="OutService">外出服务</string>
    <string name="PropertiesService">物业服务</string>
    <string name="HouseService">家政服务</string>
    <string name="today_food">今日饮食</string>
    <string name="today_medicine">服药</string>
    <string name="call_bt">快捷呼叫</string>
    <string name="call_number">联系方式</string>
    <string name="title_activity_older_restaurant">OlderRestaurantActivity</string>
    <string name="reserver_seat">预定</string>
    <string name="reserver_seated">已经预定</string>
    <string name="account_identity">身份证</string>
    <string name="account_name">姓名</string>
    <string name="account_community">社区名</string>
    <string name="account_address">地址</string>
    <string name="title_activity_history_info">HistoryInfo</string>
    <string name="historical_list">历史列表</string>
    <string name="title_activity_history">健康数值</string>
    <string name="call_service">叫车服务</string>
    <string name="call">呼叫</string>
    <string name="locate_bt">定位</string>
    <string name="dish_name">菜品名字</string>
    <string name="title_activity_old_restaurant_tab">OldRestaurantTabActivity</string>
    <string name="com_name">山源科技</string>
    <string name="out">外出</string>
    <string name="title_activity_health_way">HealthWayActivity</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="chartMode">图表模式</string>
    <string name="title_activity_test_main">TestMainActivity</string>
    <string name="famService">家政服务</string>
    <string name="title_activity_propertity">PropertityActivity</string>
    <string name="clean_service">保洁</string>
    <string name="reserve_food">订餐</string>

</resources>
