<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/account_name_re_et"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:hint="@string/account_name"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/shape_corner"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/account_passwd_re_et"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/shape_corner"
        android:hint="@string/account_passwd"
        android:inputType="numberPassword"
        android:layout_height="0dp" />
    <EditText
        android:id="@+id/account_identity_re_et"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/shape_corner"
        android:hint="@string/account_identity"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/account_community_re_et"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/shape_corner"
        android:hint="@string/account_community"
        android:layout_height="0dp" />
    <EditText
        android:id="@+id/account_address_re_et"
        android:layout_width="match_parent"
        android:layout_weight="3"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@drawable/shape_corner"
        android:hint="@string/account_address"
        android:layout_height="0dp" />







</LinearLayout>