<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/head_iv"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:src="@drawable/children"
        android:layout_height="match_parent" />
    <TextView
        android:id="@+id/label_tv"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:hint="@string/app_name"
        android:layout_height="match_parent" />
    <EditText
        android:id="@+id/call_et"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_vertical|center"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_margin="10dp"
        android:hint="@string/call_number"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:background="@drawable/shape_corner"
        android:gravity="center_horizontal|center"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/call_bt"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:textSize="30sp"
        android:text="@string/call"
        android:background="@drawable/shape_corner"
        android:layout_height="match_parent" />
</LinearLayout>