<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/login_layout"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/account_user_et"
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:hint="@string/account_user"
        android:layout_margin="10dp"
        android:layout_height="0dp" />
    <EditText
        android:id="@+id/account_passwd_et"
        android:layout_weight="4"
        android:layout_margin="10dp"
        android:inputType="numberPassword"
        android:hint="@string/account_passwd"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_height="0dp">
        <TextView
            android:layout_weight="7"
            android:text="@string/account_keep"
            android:layout_width="0dp"
            android:gravity="center|center_vertical"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/account_keep_user_cb"
            android:gravity="center|center_vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent" />
        </LinearLayout>

</LinearLayout>