<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/water_electric"
            android:layout_width="200dp"
            android:hint="@string/water_electric"
            android:textColorHint="@color/white"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_spheral_blue"
            android:layout_height="200dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/open_knock"
            android:layout_width="200dp"
            android:hint="@string/open_knock"
            android:textColorHint="@color/white"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_spheral_blue"
            android:layout_height="200dp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/maintenance"
            android:layout_width="200dp"
            android:hint="@string/maintenance"
            android:textColorHint="@color/white"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_spheral_blue"
            android:layout_height="200dp" />

    </LinearLayout>



</LinearLayout>