<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#0099cc"
    tools:context=".LoginActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <LinearLayout
        android:layout_width="500dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_spheral_white"
        android:orientation="vertical"
        android:layout_height="500dp">
        <ImageView
            android:layout_width="170dp"
            android:layout_marginTop="140dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:layout_height="170dp" />
        <TextView android:id="@+id/fullscreen_content"

            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:keepScreenOn="true"
            android:textColor="#33b5e5"
            android:textStyle="bold"
            android:textSize="40sp"
            android:gravity="center"

            android:textColorLink="@color/black"

            android:text="@string/app_main_name" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:textStyle="italic"
            android:textColor="@color/beautyblue"
            android:text="@string/com_name"
            android:layout_height="wrap_content" />


        </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay" android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button android:id="@+id/login_bt" style="?metaButtonBarButtonStyle"
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_weight="1" android:text="@string/login" />
            <Button
                android:id="@+id/register_bt"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/account_sign_up"
                android:layout_height="wrap_content" />
            <!--<Button-->
                <!--android:id="@+id/locate_test_bt"-->
                <!--android:layout_weight="1"-->
                <!--style="?metaButtonBarButtonStyle"-->
                <!--android:layout_width="0dp"-->
                <!--android:onClick="locateEvent"-->
                <!--android:layout_height="match_parent" />-->

        </LinearLayout>
    </FrameLayout>

</FrameLayout>
